<resources>
    <string name="app_name">Nobar-Android</string>

    <string name="homeSubTitle1">홈텐딩 할 생각에 두근두근!</string>
    <string name="homeLaterRecipe">나중에 만들 레시피</string>
    <string name="homeAllSee">전체보기</string>
    <string name="homeSubTitle2">홈텐딩이 처음이라면</string>
    <string name="homeGuide">칵테일 가이드</string>
    <string name="homeSubTitle3">노바에서 추천하는 레시피</string>
    <string name="homeNobarPick">바가 필요 없는 레시피</string>
    <string name="home_search_recipe">레시피 검색하기</string>
    <string name="homeNotHaveRecipe">앗, 아직 저장한 레시피가 없어요</string>

    <string name="mainHome">홈</string>
    <string name="mainSearch">검색</string>
    <string name="mainRecord">기록</string>
    <string name="mainMypage">마이페이지</string>
    <string name="itemLaterRecipeName">칵테일 이름 넣는곳 칵테일 이름 넣는곳</string>
    <string name="itemLaterRecipeEnglishName">insert cocktail english name</string>
    <string name="itemGuide">테이스팅 노트를 작성해보슈</string>

    <string name="recipeFirst">우선, \u0020</string>
    <string name="recipeLetsReady">준비해볼까요?</string>
    <string name="recipeTimeToBartender">바텐더가 되는 시간, \u0020</string>
    <string name="recipeLetsMake">만들어볼까요?</string>
    <string name="recipeWritingTastingNote">테이스팅 노트 작성하기</string>
    <string name="recipeTodayExperience">오늘의 이 경험을, \u0020</string>
    <string name="recipeLetsRecord">기록해볼까요?</string>

    <string name="searchDetailHint">칵테일 이름, 재료 이름</string>
    <string name="searchDetailRecent">최근 검색어</string>
    <string name="searchDetailNoRecent">최근 검색어가 아직 없어요</string>
    <string name="searchDeleteAll">전체 삭제</string>
    <string name="searchViewAll">전체 보기</string>
    <string name="searchSuggest">추천 검색어</string>
    <string name="searchCocktailRecipe">칵테일 레시피</string>
    <string name="searchIngredient">재료</string>
    <string name="searchTitle">검색 결과</string>
    <string name="searchHint">칵테일 이름, 술 이름을 검색해보세요</string>
    <string name="searchWhatBase">어떤 베이스로 칵테일을 만들고 싶으세요?</string>
    <string name="searchOfCocktail">로 만들 수 있는 칵테일</string>

    <string-array name="spinner">
        <item>가나다 순</item>
        <item>권용민 순</item>
        <item>김수연 순</item>
        <item>김지원 순</item>
    </string-array>


    <string name="myPageTitle">닉네임의 마이페이지</string>
    <string name="myPageButtonNewNote">+ 새로운 노트 작성하기</string>
    <string name="myPageTastingNote">테이스팅 노트</string>
    <string name="myPageLaterRecipe">나중에 만들 레시피</string>

    <string name="tastingNoteTitleWrite">테이스팅 노트 기록하기</string>
    <string name="tastingNoteTitleModify">테이스팅 노트 수정하기</string>
    <string name="tastingNoteTitle">테이스팅 노트</string>

    <string name="tastingNoteEnrollment">등록</string>
    <string name="tastingNoteWhatCocktail">어떤 칵테일을 기록할까요?</string>
    <string name="tastingNoteWhatCocktailHint">칵테일 이름을 검색해보세요</string>
    <string name="tastingNoteWhenDrink">언제 칵테일을 마셨나요?</string>
    <string name="tastingNoteWhenHint">이곳을 눌러 날짜를 선택해주세요</string>
    <string name="tastingNoteWhatTaste">맛은 어땠나요?</string>
    <string name="tastingNoteMaxThree">최대 3개까지 선택 가능합니다</string>
    <string name="tastingNoteMyScore">칵테일이 얼마나 마음에 들었나요?</string>
    <string name="tastingNoteDetailEvaluation">칵테일 맛 평가도 남겨볼까요?</string>
    <string name="tastingNoteEvalutaionHint">칵테일 맛에 대한 주관적인 평가를 들려주세요</string>
    <string name="tastingNoteWriteTip">나만의 홈텐딩 팁도 남겨볼까요?</string>
    <string name="tastingNoteTipHint">직접 칵테일을 만들어 보면서 알게 된 나만의 팁을 자유롭게 기록해주세요</string>

    <string name="tastingNoteSuffix">의 노트</string>
    <string name="tastingNoteDate">칵테일을 만든 날짜</string>
    <string name="tastingNoteChosenTag">내가 고른 맛 태그</string>
    <string name="tastingNoteSatisfaction">칵테일 만족도</string>
    <string name="tastingNoteEvaluation">칵테일 맛 평가</string>
    <string name="tastingNoteTip">나만의 홈텐딩 팁</string>
    <string name="tastingNoteCount">(%d/200자)</string>

    <string name="homeGuideRecipeSee">레시피 보기</string>

    <string name="recipeDetailDescription">같은 칵테일을 마셔도 테이스팅 노트는 여러 번 기록할 수 있어요\n어제의 홈텐딩과 오늘의 홈텐딩은 다르니까요\n오늘 마신 칵테일로 오늘을 기억해보는 것은 어때요?\n당신의 하루가 더 오래 기억되길 바라요</string>
    <string name="homeLaterRecipeTitle">나중에 만들 레시피</string>
    <string name="settingCenter">고객센터</string>
    <string name="settingWithdraw">회원 탈퇴</string>
    <string name="settingLibrary">오픈소스 라이브러리</string>
    <string name="settingPolicy">약관 및 정책</string>
    <string name="settingInquire">문의하기</string>
    <string name="settingSetting">설정</string>

    <string name="homeAdapter1">몰디브 아니죠. 쿠바가 원조입니다.\n"<b>"모히또"</b>" 가서 쿠바 한 잔?</string>
    <string name="homeAdapter2">달콤한 화이트 럼과 떠나는\n와이키키 해변, "<b>"블루하와이"</b>"</string>
    <string name="homeAdapter3">뜨거운 여름엔 이 칵테일!\n"<b>"섹스 온 더 비치"</b>"</string>
    <string name="homeAdapter4">그 그 그 복숭아 맛 나는 칵테일\n달달한 아 그 "<b>"피치 크러쉬!"</b>"</string>
    <string name="homeAdapter5">12시 귀가를 보장하는\n논알콜 칵테일, "<b>"신데렐라"</b>"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onBoarding1">수많은 홈텐딩 레시피를\n한 곳에서 확인할 수 있어요</string>
    <string name="onBoarding2">재료와 베이스로\n쉽게 검색할 수 있어요</string>
    <string name="onBoarding3">테이스팅 노트로\n맛의 잔상을 남겨보세요</string>
</resources>

