<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.main.setting.SettingActivity">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:paddingTop="14dp"
            android:paddingBottom="15dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:src="@drawable/ic_btn_store_btn_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="85dp"
                android:layout_marginEnd="137dp"
                android:fontFamily="@font/pretendard_bold"
                android:includeFontPadding="false"
                android:text="@string/settingSetting"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageBack"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/viewLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grayDD"
            app:layout_constraintTop_toBottomOf="@id/layoutTop" />

        <TextView
            android:id="@+id/textCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settingCenter"
            android:textColor="@color/pinkE93370"
            android:fontFamily="@font/pretendard_semibold"
            android:textSize="17sp"
            android:includeFontPadding="false"
            app:layout_constraintTop_toBottomOf="@id/viewLine"
            android:layout_marginTop="31dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"/>

        <View
            android:id="@+id/viewLine2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grayDD"
            app:layout_constraintTop_toBottomOf="@id/textCenter"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/textInquire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/pretendard_regular"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/viewLine2"
            android:textSize="15sp"
            android:text="@string/settingInquire"/>

        <TextView
            android:id="@+id/textService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="서비스"
            android:textColor="@color/pinkE93370"
            android:fontFamily="@font/pretendard_semibold"
            android:textSize="17sp"
            android:includeFontPadding="false"
            app:layout_constraintTop_toBottomOf="@id/textInquire"
            android:layout_marginTop="80dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"/>

        <View
            android:id="@+id/viewLine3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grayDD"
            app:layout_constraintTop_toBottomOf="@id/textService"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/textPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/pretendard_regular"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/viewLine3"
            android:textSize="15sp"
            android:text="@string/settingPolicy"/>

        <TextView
            android:id="@+id/textLibrary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/pretendard_regular"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/textPolicy"
            android:textSize="15sp"
            android:text="@string/settingLibrary"/>

        <TextView
            android:id="@+id/textWithdraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/pretendard_regular"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/textLibrary"
            android:textSize="15sp"
            android:text="@string/settingWithdraw"/>







    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>